--- a/index.html
+++ b/index.html
@@ -6,9 +6,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <title>Document</title>
 </head>
 <body>
-    <a href="" class="btn btn-danger">Learn more</a>
+    <div class="container">
+        <ul class="nav justify-content-start">
+            <li class="nav-item">
+                <a class="nav-link active" href="#"> <img src="" alt="logo of microsoft"> </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Microsoft 365</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Office</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Microsoft</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Xbox</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Support</a>
+            </li>
+        </ul>
+    </div>
 </body>
 </html>
