First commit of all codes

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="container">
         <ul class="nav justify-content-start">
             <li class="nav-item">
-                <a class="nav-link active" href="#"> <img src="" alt="logo of microsoft"> </a>
+                <a class="nav-link active" href="#"> <img src="./Images/Screenshot (29).png"width="80px"height="30px" alt="logo of microsoft"> </a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Microsoft 365</a>
@@ -32,6 +32,10 @@
                 <a class="nav-link" href="#">Support</a>
             </li>
         </ul>
-    </div>
+        <div class="jumbotron">
+            <a href="#" class="lrnMre btn btn-outline-dark"> Learn More</a>
+            <p>  <img src="./Images/Screenshot (30).png" height=" 300px" width="  300px"alt="" class="img1 rounded"></p>
+           
+        </div>
 </body>
 </html>
