--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script> -->
@@ -8,13 +9,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/bootstrap.css">
     <link rel="stylesheet" href="./style.css">
-    <title>Document</title>
+    <title>Microsoft's Home page by me</title>
+    <link rel="shortcut icon" href="./Images/favicon_io/favicon.ico" type="image/x-icon">
 </head>
+
 <body>
-    <div class="container">
+    <div class="container-fluid">
         <ul class="nav justify-content-start">
-            <li class="nav-item">
-                <a class="nav-link active" href="#"> <img src="./Images/Screenshot (29).png"width="80px"height="30px" alt="logo of microsoft"> </a>
+            <li class="navbar-brand">
+                <img class="img2" src="./Images/logo.png" width="30px" height="25px" alt="logo of microsoft">Microsoft
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Microsoft 365</a>
@@ -32,10 +35,197 @@
                 <a class="nav-link" href="#">Support</a>
             </li>
         </ul>
-        <div class="jumbotron">
-            <a href="#" class="lrnMre btn btn-outline-dark"> Learn More</a>
-            <p>  <img src="./Images/Screenshot (30).png" height=" 300px" width="  300px"alt="" class="img1 rounded"></p>
-           
+
+        <div class="container-fluid">
+            <div class="jumbo">
+                <div class="text">
+                    <strong>
+                        <h3> Life’s better together</h3>
+                    </strong>
+                    <p>
+                        Now use Microsoft Teams to chat, call,</p>
+                    <p> and make plans with family and friends</p>
+                    <a href="#" class="lrnMre btn btn-dark"> Learn More</a>
+                </div>
+                <img src="./Images/priscilla-du-preez-OEdkPaxYMXU-unsplash.jpg" width="600px" height="400px" alt="">
+            </div>
         </div>
+        <br>
+        <p>
+        <div class="container-fluid">
+            <div class="grid row">
+                <div class="col-3">
+                    <img src="./Images/RE4E4rR.webp" alt="" height="200px" width="200px">
+                    <div class="text-1">
+                        <h4><strong>Microsoft OneDrive</strong></h4>
+                        Save your files and photos to OneDrive
+                        <pre>and access them from any device, <pre>anywhere.</pre>
+                        </pre>
+                    </div>
+                    <a href="#" class="gridA">-Learn more </a>
+                </div>
+                <div class="col-3">
+                    <img src="./Images/download.png" alt="">
+                    <div class="text-1">
+                        <h4><strong>Microsoft 365</strong></h4>
+                        Premium Office apps, extra cloud storage,
+                        <pre>advanced security, <pre>and more—all in one convenient subscription.</pre>
+                        </pre>
+                    </div>
+                    <a href="#" class="gridA" target="_blank"> -For one Person</a> <br>
+                    <a href="#" class="gridA" target="_blank"> -For six Persons</a>
+                </div>
+                <div class="col-3">
+                    <img src="./Images/images.jfif" alt="" width="250px" height="200px">
+                    <div class="text-1">
+                        <h4><strong>Microsoft Edge</strong></h4>
+                        World-class performance with more privacy, more productivity,
+                        <pre>and more value while you browse.</pre>
+                    </div>
+                    <a href="#" class="gridA" target="_blank"> -Learn more</a>
+                </div>
+                <div class="col-3">
+                    <img src="./Images/zan-AmEeEB1g3XQ-unsplash.jpg" width="200px" height="200px" alt="">
+                    <div class="text-1">
+                        <h4><strong>Microsoft OneNote</strong></h4>
+                        Premium Office apps, extra cloud storage,
+                        <pre>advanced security, <pre>and more—all in one convenient subscription.</pre>
+                        </pre>
+                    </div>
+                    <a href="#" class="gridA" target="_blank"> -Download</a>
+                </div>
+            </div>
+        </div>
+        </p>
+        <div class="container-fluid">
+            <div class="jumbo">
+                <div class="text">
+                    <strong>
+                        <h3>Outlook for iOS <pre>and Androids </pre></h3>
+                    </strong>
+                    <p>
+                        Connect. Organize. Get things done.
+                        </p>
+                    <a href="#" class="lrnMre btn btn-dark"> Download Now </a>
+                </div>
+                <img src="./Images/hardik-sharma-CrPAvN29Nhs-unsplash.jpg" width="600px" height="400px" alt="">
+            </div>
+        </div>
+<br>
+        <div class="container-fluid">
+            <div class="grid row">
+                <div class="col-3">
+                    <img src="./Images/RWGaY8.webp" alt="" height="200px" width="200px">
+                    <div class="text-1">
+                        <h4><strong>Microsoft OneDrive</strong></h4>
+                        Save your files and photos to OneDrive
+                        <pre>and access them from any device, <pre>anywhere.</pre>
+                        </pre>
+                    </div>
+                    <a href="#" class="gridA">-Learn more </a>
+                </div>
+                <div class="col-3">
+                    <img src="./Images/RE4E4rT.webp" alt="">
+                    <div class="text-1">
+                        <h4><strong>Microsoft 365</strong></h4>
+                        Premium Office apps, extra cloud storage,
+                        <pre>advanced security, <pre>and more—all in one convenient subscription.</pre>
+                        </pre>
+                    </div>
+                    <a href="#" class="gridA" target="_blank"> -For one Person</a> <br>
+                    <a href="#" class="gridA" target="_blank"> -For six Persons</a>
+                </div>
+                <div class="col-3">
+                    <img src="./Images/RWyG26.webp" alt="" width="200px" height="200px">
+                    <div class="text-1">
+                        <h4><strong>Microsoft Edge</strong></h4>
+                        World-class performance with more privacy, more productivity,
+                        <pre>and more value while you browse.</pre>
+                    </div>
+                    <a href="#" class="gridA" target="_blank"> -Learn more</a>
+                </div>
+                <div class="col-3">
+                    <img src="./Images/RE2OfW4.webp" width="200px" height="200px" alt="">
+                    <div class="text-1">
+                        <h4><strong>Microsoft OneNote</strong></h4>
+                        Premium Office apps, extra cloud storage,
+                        <pre>advanced security, <pre>and more—all in one convenient subscription.</pre>
+                        </pre>
+                    </div>
+                    <a href="#" class="gridA" target="_blank"> -Download</a>
+                </div>
+            </div>
+        </div>
+        </p>
+    </div>
+    <br>
+    <div class="jumbotron container">
+        <div class="jump">
+        <h1 class="display-4 text-2">
+         <strong>  Microsoft's response to COVID-19 </strong>
+        </h1>
+        <p>Read how we’re responding to the COVID-19 outbreak, and get resources to help.</p>
+        <a href="#" class="covid">Learn more ></a>
+    </div>
+</div>
+    <br>
+        Follow Microsoft    <a href="#"> <img class="ancor" src="./Images/Facebook_logo.jfif" alt=""></a>
+            <a href="#"> <img class="ancor" src="./Images/twiter_logo.png" alt=""></a>
+            <a href="#"><img  class="ancor"src="./Images/likedin_logo.jfif" alt=""></a>
+            <br>
+            <footer class="jumbotron">
+                <div class="container-fluid">           
+                    <table class="table table-borderless">
+                      <thead>
+                        <tr>
+                          <th>Microsoft Store</th>
+                          <th>Education</th>
+                          <th>Enterprise</th>
+                          <th>Developers</th>
+                          <th>Company</th>
+                        </tr>
+                      </thead>
+                      <tbody>
+                        <tr>
+                          <td>Account Profile</td>
+                          <td>Office 365 For Schools</td>
+                          <td>Microsoft Azure</td>
+                          <td>Microsoft Visual Studio Code</td>
+                          <td>Careers</td>
+                        </tr>
+                        <tr>
+                          <td>Returns</td>
+                          <td></td>
+                          <td></td>
+                          <td>Developer center</td>
+                          <td>About Microsoft</td>
+                        </tr>
+                        <tr>
+                          <td>Order tracking</td>
+                          <td></td>
+                          <td> </td>
+                          <td>Channel 9</td>
+                          <td>Company News</td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td>Microsoft 365 dev center</td>
+                            <td>Investors</td>
+                          </tr>
+                          <tr>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td>Microsoft 365 developer Programme</td>
+                            <td></td>
+                          </tr>
+                      </tbody>
+                    </table>
+                </div>
+            </footer>
+    </div>
 </body>
+
 </html>
